--- a/index.html
+++ b/index.html
@@ -3,18 +3,14 @@
   <head>
     <meta charset="UTF-8" />
     <meta name="viewport" content="width=device-width, initial-scale=1.0" />
-    <title>JG MODAS - Moda Masculina desde 1981</title>
-    <meta name="description" content="JG MODAS - Tradição desde 1981. Moda masculina moderna com qualidade, estilo e preço justo. Camisetas, polos, camisas, bermudas, calças e conjuntos." />
+    <title>JG MODAS</title>
+    <meta name="description" content="JG MODAS - Tradição desde 1981. Moda masculina, feminina moderna com qualidade, estilo e preço justo. Camisetas, polos, camisas, bermudas, calças e conjuntos." />
     <meta name="author" content="JG MODAS" />
 
-    <meta property="og:title" content="JG MODAS - Moda Masculina desde 1981" />
-    <meta property="og:description" content="Tradição desde 1981. Moda masculina moderna com qualidade, estilo e preço justo." />
+    <meta property="og:title" content="JG MODAS" />
+    <meta property="og:description" content="Tradição desde 1981. Moda masculina, feminina moderna com qualidade, estilo e preço justo." />
     <meta property="og:type" content="website" />
-    <meta property="og:image" content="https://lovable.dev/opengraph-image-p98pqg.png" />
-
-    <meta name="twitter:card" content="summary_large_image" />
-    <meta name="twitter:site" content="@Lovable" />
-    <meta name="twitter:image" content="https://lovable.dev/opengraph-image-p98pqg.png" />
+    <meta property="og:image" content=".\" />
   </head>
 
   <body>
