feat: add CarouselHero component with autoplay functionality and responsive images

--- a/index.html
+++ b/index.html
@@ -3,14 +3,14 @@
   <head>
     <meta charset="UTF-8" />
     <meta name="viewport" content="width=device-width, initial-scale=1.0" />
-    <title>JG MODAS</title>
+    <title>JG Modas</title>
     <meta name="description" content="JG MODAS - Tradição desde 1981. Moda masculina, feminina moderna com qualidade, estilo e preço justo. Camisetas, polos, camisas, bermudas, calças e conjuntos." />
     <meta name="author" content="JG MODAS" />
 
-    <meta property="og:title" content="JG MODAS" />
+    <meta property="og:title" content="JG Modas" />
     <meta property="og:description" content="Tradição desde 1981. Moda masculina, feminina moderna com qualidade, estilo e preço justo." />
     <meta property="og:type" content="website" />
-    <meta property="og:image" content=".\" />
+    <link rel="icon" type="image/png" href="public\img\logo.png">
   </head>
 
   <body>
