fix: update favicon and remove unused logo images

--- a/index.html
+++ b/index.html
@@ -10,7 +10,7 @@
     <meta property="og:title" content="JG Modas" />
     <meta property="og:description" content="Tradição desde 1981. Moda masculina, feminina moderna com qualidade, estilo e preço justo." />
     <meta property="og:type" content="website" />
-    <link rel="icon" type="image/png" href="\public\img\logo.png">
+    <link rel="icon" type="image/png" href="\public\img\logoChrome.png">
   </head>
 
   <body>
